--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest --verbose",
-    "server": "tsc -p server/tsconfig.json && babel-node server/dist/index.js"
+    "server": "tsc -p server/tsconfig.json && babel-node server/dist/src/index.js"
   },
   "main": "index.js",
   "repository": "git@github.com:edwarddamato/foodie.git",
