--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "test": "jest --verbose",
+    "test:server": "jest --runInBand --no-cache --verbose --config=server/jest.config.json",
     "server": "tsc -p server/tsconfig.json && babel-node server/dist/src/index.js"
   },
   "main": "index.js",
@@ -61,26 +62,10 @@
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.17.0",
     "ts-jest": "^20.0.6",
+    "typemoq": "^1.7.0",
     "typescript": "^2.3.4",
     "typescript-eslint-parser": "^3.0.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
-  },
-  "jest": {
-    "globals": {
-      "__TS_CONFIG__": "./server/tsconfig.json"
-    },
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "moduleNameMapper": {
-      "\\.(css|less|scss)$": "identity-obj-proxy"
-    }
   }
 }
