--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,12 +4,14 @@
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "es6",
-        "target": "es6",
+        "target": "es5",
         "baseUrl": "./src",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "lib": ["es2015"]
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "**/__tests__/**"
     ],
     "include": [
         "./src/**/*.ts"
