--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,19 +1,20 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
+        "outDir": "ts-build",
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
-        "baseUrl": "./src",
-        "allowSyntheticDefaultImports": true,
-        "lib": ["es2015"]
+        "jsx": "react",
+        "baseUrl": "src",
+        "moduleResolution": "node",
+        "lib": ["es2015", "dom"]
     },
+    "include": [
+        "./src/**/*"
+    ],
     "exclude": [
         "../node_modules",
         "**/__tests__/*"
-    ],
-    "include": [
-        "./src/**/*.ts"
     ]
 }
