--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,15 +5,17 @@
         "noImplicitAny": true,
         "module": "es6",
         "target": "es5",
+        "moduleResolution": "node",
         "baseUrl": "./src",
         "allowSyntheticDefaultImports": true,
-        "lib": ["es2015"]
+        "lib": ["es2015"],
+        "types" : ["node", "express"]
     },
-    "exclude": [
-        "../node_modules",
-        "**/__tests__/*"
-    ],
     "include": [
         "./src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/__tests__/*"
     ]
 }
